Modify WFP interface

--- a/WpfInterface/MainWindow.xaml
+++ b/WpfInterface/MainWindow.xaml
@@ -6,5 +6,32 @@
         xmlns:local="clr-namespace:WpfInterface"
         mc:Ignorable="d"
         Title="NotWinForm" Height="450" Width="600" Topmost="True">
-    <Grid/>
+    <Grid Background="AliceBlue">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.6*"/>
+            <ColumnDefinition Width="0.4*"/>
+        </Grid.ColumnDefinitions>
+        <TextBlock x:Name="TBInfo" Grid.Column="0" Background="White"/>
+        <Grid Grid.Column="7">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Button x:Name="ButAddFig" Content="Add figure" Grid.Row="0" MaxHeight="50" MaxWidth="120"/>
+            <Button x:Name="ButShowlits" Content="Show list" Grid.Row="1" MaxHeight="50" MaxWidth="120"/>
+            <Button x:Name="ButSafeData" Content="Safe data" Grid.Row="2" MaxHeight="50" MaxWidth="120"/>
+            <Button x:Name="ButRewAndSafeData" Content="Rewind and safe data" Grid.Row="3" MaxHeight="50" MaxWidth="120"/>
+            <Button x:Name="ButReadData" Content="Read data" Grid.Row="4" MaxHeight="50" MaxWidth="120"/>
+            <Button x:Name="ButSortList" Content="Sort list" Grid.Row="5" MaxHeight="50" MaxWidth="120"/>
+            <Button x:Name="ButClear" Content="Clear text" Grid.Row="6" MaxHeight="50" MaxWidth="120"/>
+
+        </Grid>
+    </Grid>
+
+
 </Window>
