--- a/WpfInterface/MainWindow.xaml
+++ b/WpfInterface/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfInterface"
         mc:Ignorable="d"
-        Title="NotWinForm" Height="450" Width="500" Topmost="True">
+        Title="NotWinForm" x:Name="MainWin" Height="450" Width="500" Topmost="True">
     <Grid Background="AliceBlue">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.6*"/>
