--- a/WpfInterface/MainWindow.xaml
+++ b/WpfInterface/MainWindow.xaml
@@ -23,7 +23,7 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Button x:Name="ButAddFig" Content="Add figure" Grid.Row="0" MaxHeight="50" MaxWidth="120" Click="ButAddFig_Click"/>
-            <Button x:Name="ButShowlits" Content="Show list" Grid.Row="1" MaxHeight="50" MaxWidth="120"/>
+            <Button x:Name="ButShowlits" Content="Show list" Grid.Row="1" MaxHeight="50" MaxWidth="120" Click="ButShowlits_Click"/>
             <Button x:Name="ButSafeData" Content="Safe data" Grid.Row="2" MaxHeight="50" MaxWidth="120"/>
             <Button x:Name="ButRewAndSafeData" Content="Rewind and safe data" Grid.Row="3" MaxHeight="50" MaxWidth="120"/>
             <Button x:Name="ButReadData" Content="Read data" Grid.Row="4" MaxHeight="50" MaxWidth="120"/>
